tests/error/p5.teach.js error/sketch.py
from p5 import *

def setup():
  createCanvas(400, 400)
  background("black")
  drawTickAxes()

def draw():

  linmap()

  # drawTickAxes()
  coordinateMode()

  image()
  loadImage()
  loadSound()

